--- a/build.gradle
+++ b/build.gradle
@@ -8,13 +8,13 @@ buildscript {
         }
     }
     dependencies {
-        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.3.3.RELEASE'
+        classpath 'org.springframework.boot:spring-boot-gradle-plugin:1.4.2.RELEASE'
         classpath 'gradle.plugin.com.jamesward:atom-gradle-plugin:0.0.1'
     }
 }
 
 apply plugin: 'java'
-apply plugin: 'spring-boot'
+apply plugin: 'org.springframework.boot'
 apply plugin: 'com.jamesward.atomgradleplugin'
 
 repositories {
@@ -24,9 +24,9 @@ repositories {
 }
 
 dependencies {
-    compile 'org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE'
-    compile 'org.springframework.boot:spring-boot-devtools:1.3.3.RELEASE'
-    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.3.3.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.4.2.RELEASE'
+    compile 'org.springframework.boot:spring-boot-devtools:1.4.2.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-data-jpa:1.4.2.RELEASE'
     compile 'org.postgresql:postgresql:9.4.1209'
     compile 'org.webjars:bootstrap:2.3.1'
 }
